crates/plotnik-tests/tests/04-emit/types/mapped/record_variant_alias.txt
Alias = (identifier)

Expr = [
  Id: (Alias) @name :: Ident
  Num: (number) @value
]

Q = (program
  (expression_statement (Expr) @expr)
)
------------------ DIAGNOSTICS -------------------
error: `@name` cannot capture `(Alias)` because `Alias` produces no result value
 --> query.ptk:4:7
  |
1 | Alias = (identifier)
  | -------------------- `Alias` is defined here
...
4 |   Id: (Alias) @name :: Ident
  |       ^^^^^^^
  |
help: make `Alias` produce a result by changing `(identifier)` to `(identifier) @name_value` in definition `Alias`
help: or remove `@name` and capture a node pattern directly
